[tool.poetry]
name = "algorithm-dd"
version = "0.1.0"
description = ""
authors = ["chchoi0807 <ckdgus11021@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "algorithm_dd"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
